--- a/styles/style.css
+++ b/styles/style.css
@@ -18,17 +18,17 @@ body .comment-section {
 .comments-container {
   width: 50%;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 .comments-container .comment .comment-element {
   display: flex;
   background-color: white;
-  padding: 27px;
-  margin-bottom: 20px;
-  border-radius: 10px;
+  padding: 1.69rem;
+  margin-bottom: 1.25rem;
+  border-radius: 0.625rem;
 }
 .comments-container .comment .comment-element .score {
-  padding: 10px;
+  padding: 0.625rem;
   background-color: hsl(223, 19%, 93%);
   color: hsl(238, 40%, 52%);
   font-weight: 500;
@@ -36,9 +36,9 @@ body .comment-section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-right: 15px;
-  gap: 15px;
-  border-radius: 10px;
+  margin-right: 0.94rem;
+  gap: 0.94rem;
+  border-radius: 0.625rem;
   height: 90%;
 }
 .comments-container .comment .comment-element .score .plus-btn:hover,
@@ -49,11 +49,11 @@ body .comment-section {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 12px;
+  margin-bottom: 0.75rem;
 }
 .comments-container .comment .comment-element .user-info img {
-  width: 30px;
-  height: 30px;
+  width: 1.89rem;
+  height: 1.89rem;
 }
 .comments-container .comment .comment-element .user-info .username {
   font-weight: 700;
@@ -61,17 +61,17 @@ body .comment-section {
 .comments-container .comment .comment-element .user-info .wrapper {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 0.625rem;
 }
 .comments-container .comment .comment-element .user-info .user-id {
   color: white;
   background-color: hsl(238, 40%, 52%);
-  padding: 0 7px;
+  padding: 0 0.44rem;
 }
 .comments-container .comment .comment-element .user-info .reply-btn button {
   display: flex;
   align-items: center;
-  gap: 7px;
+  gap: 0.44rem;
   background: none;
   border: none;
   color: hsl(238, 40%, 52%);
@@ -85,18 +85,18 @@ body .comment-section {
   opacity: 45%;
 }
 .comments-container .comment .comment-element .user-info .reply-btn button img {
-  width: 10px;
-  height: 10px;
+  width: 0.625rem;
+  height: 0.625rem;
 }
 .comments-container .comment .comment-element .user-info .delete-edit-btn {
   display: flex;
-  gap: 20px;
+  gap: 1.25rem;
   font-family: "Rubik", Arial, Helvetica, sans-serif;
 }
 .comments-container .comment .comment-element .user-info .delete-edit-btn button {
   display: flex;
   align-items: center;
-  gap: 7px;
+  gap: 0.44rem;
 }
 .comments-container .comment .comment-element .user-info .delete-edit-btn .delete-btn,
 .comments-container .comment .comment-element .user-info .delete-edit-btn .edit-btn {
@@ -120,11 +120,11 @@ body .comment-section {
   font-weight: 700;
 }
 .comments-container .comment .comment-element .user-info .delete-edit-btn img {
-  width: 10px;
-  height: 10px;
+  width: 0.625rem;
+  height: 0.625rem;
 }
 .comments-container .comment .reply {
-  margin-left: 65px;
+  margin-left: 4.1rem;
 }
 .comments-container .comment .reply .comment-content .reply-to {
   color: hsl(238, 40%, 52%);
@@ -132,44 +132,44 @@ body .comment-section {
 }
 
 .currentUser-container {
-  width: 45%;
+  width: 50%;
   margin: auto;
   box-sizing: border-box;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 .currentUser-container .current-user {
   display: flex;
   align-items: flex-start;
   width: 100%;
-  gap: 15px;
+  gap: 0.94rem;
   background-color: white;
   box-sizing: border-box;
-  padding: 27px;
-  border-radius: 10px;
+  padding: 1.69rem;
+  border-radius: 0.625rem;
 }
 .currentUser-container .current-user img {
-  width: 35px;
-  height: 35px;
+  width: 2.19rem;
+  height: 2.19rem;
 }
 .currentUser-container .current-user textarea {
   font-family: "Rubik", Arial, Helvetica, sans-serif;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 1.25rem;
   width: 100%;
   outline: transparent;
-  border: 1px solid hsl(223, 19%, 93%);
-  border-radius: 10px;
+  border: 0.0625rem solid hsl(223, 19%, 93%);
+  border-radius: 0.625rem;
 }
 .currentUser-container .current-user textarea:focus {
-  border: 1px solid hsl(212, 24%, 26%);
+  border: 0.0625rem solid hsl(212, 24%, 26%);
 }
 .currentUser-container .current-user .send-btn {
   background: none;
   border: none;
   font-family: "Rubik", Arial, Helvetica, sans-serif;
-  padding: 8px 17px;
+  padding: 0.5rem 1.0625rem;
   border: none;
-  border-radius: 5px;
+  border-radius: 0.316rem;
   background-color: hsl(238, 40%, 52%);
   color: white;
 }
@@ -187,4 +187,156 @@ body .comment-section {
 
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media screen and (max-width: 1115px) {
+  .comments-container {
+    width: 55%;
+  }
+  .currentUser-container {
+    width: 55%;
+  }
+}
+@media screen and (max-width: 1015px) {
+  .comments-container {
+    width: 60%;
+  }
+  .currentUser-container {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 945px) {
+  .comments-container {
+    width: 65%;
+  }
+  .currentUser-container {
+    width: 65%;
+  }
+}
+@media screen and (max-width: 945px) {
+  .comments-container {
+    width: 70%;
+  }
+  .currentUser-container {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 810px) {
+  .comments-container {
+    width: 75%;
+  }
+  .currentUser-container {
+    width: 75%;
+  }
+}
+@media screen and (max-width: 760px) {
+  .comments-container {
+    width: 80%;
+  }
+  .currentUser-container {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 710px) {
+  .comments-container {
+    width: 85%;
+  }
+  .currentUser-container {
+    width: 85%;
+  }
+}
+@media screen and (max-width: 670px) {
+  .comments-container {
+    width: 90%;
+  }
+  .currentUser-container {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 627px) {
+  .comments-container {
+    width: 95%;
+  }
+  .comments-container .comment .reply {
+    margin-left: 2rem;
+  }
+  .currentUser-container {
+    width: 95%;
+  }
+}
+@media screen and (max-width: 565px) {
+  .comments-container {
+    width: 95%;
+  }
+  .comments-container .comment .reply {
+    margin-left: 1rem;
+  }
+  .currentUser-container {
+    width: 95%;
+  }
+}
+@media screen and (max-width: 530px) {
+  .comments-container {
+    font-size: 0.9rem;
+  }
+  .comments-container .comment .comment-element {
+    margin-bottom: 0.8rem;
+  }
+  .currentUser-container {
+    font-size: 0.9rem;
+  }
+}
+@media screen and (max-width: 505px) {
+  .comments-container .comment .comment-element {
+    position: relative;
+    padding-bottom: 2.5rem;
+  }
+  .comments-container .comment .comment-element .user-info .reply-btn {
+    position: absolute;
+    bottom: 1rem;
+    right: 1.812rem;
+  }
+  .comments-container .comment .comment-element .user-info .delete-edit-btn {
+    position: absolute;
+    bottom: 1rem;
+    right: 1.812rem;
+  }
+  .comments-container .comment .comment-element .score {
+    position: absolute;
+    bottom: 8px;
+    left: 29px;
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    margin-right: 0;
+    width: 10%;
+    gap: 1rem;
+    height: 0;
+  }
+  .comments-container .comment .comment-element .comment-content {
+    margin-bottom: 1.25rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .comments-container .comment .comment-element .score {
+    padding: 1.3rem;
+  }
+  .currentUser-container {
+    position: relative;
+  }
+  .currentUser-container .current-user img {
+    position: absolute;
+    bottom: 1.25rem;
+    left: 1.812rem;
+  }
+  .currentUser-container .current-user .send-btn {
+    position: absolute;
+    padding: 1rem 1.56rem;
+    bottom: 1rem;
+    right: 1.812rem;
+  }
+  .currentUser-container .current-user textarea {
+    margin-bottom: 4.95rem;
+    padding-bottom: 2.19rem;
+  }
 }/*# sourceMappingURL=style.css.map */
