--- a/styles/style.scss
+++ b/styles/style.scss
@@ -29,6 +29,54 @@ $border-radius: 0.625rem;
   }
 }
 
+@mixin submit-btn-config {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  gap: 0.94rem;
+  background-color: white;
+  box-sizing: border-box;
+  padding: 1.69rem;
+  border-radius: $border-radius;
+
+  img {
+    width: 2.19rem;
+    height: 2.19rem;
+  }
+
+  textarea {
+    @include font-family();
+    box-sizing: border-box;
+    padding: 1.25rem;
+    width: 100%;
+    outline: transparent;
+    border: 0.0625rem solid $color-Light-gray;
+    border-radius: $border-radius;
+
+    &:focus {
+      border: 0.0625rem solid $color-Dark-blue;
+    }
+  }
+
+  .send-btn,
+  .send-reply-btn {
+    @include comments-btn-style();
+    @include font-family();
+    padding: 0.5rem 1.0625rem;
+    border: none;
+    border-radius: 0.316rem;
+    background-color: $color-Moderate-blue;
+    color: white;
+
+    @include btn-interaction();
+  }
+}
+
+@mixin reply-to-style {
+  color: $color-Moderate-blue;
+  font-weight: $font-weight;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -120,6 +168,22 @@ body {
   margin-top: 1.25rem;
 
   .comment {
+    .reply-box {
+      @include submit-btn-config();
+      margin-bottom: 1.25rem;
+      margin-top: -8px;
+
+      .current-user-reply {
+        display: flex;
+        align-items: flex-start;
+        width: 100%;
+        gap: 0.94rem;
+        background-color: white;
+        box-sizing: border-box;
+        border-radius: $border-radius;
+      }
+    }
+
     .comment-element {
       display: flex;
       background-color: white;
@@ -127,8 +191,16 @@ body {
       margin-bottom: 1.25rem;
       border-radius: $border-radius;
 
+      .wrapper-element {
+        flex-grow: 1;
+      }
+
+      .reply-to {
+        @include reply-to-style();
+      }
+
       .score {
-        padding: 0.625rem;
+        padding: 15px 10px;
         background-color: $color-Light-gray;
         color: $color-Moderate-blue;
         font-weight: 500;
@@ -139,7 +211,11 @@ body {
         margin-right: 0.94rem;
         gap: 0.94rem;
         border-radius: $border-radius;
-        height: 90%;
+        height: 4.1rem;
+
+        .score-btn {
+          @include comments-btn-style();
+        }
 
         .plus-btn:hover,
         .minus-btn:hover {
@@ -167,6 +243,7 @@ body {
           display: flex;
           align-items: center;
           gap: 0.625rem;
+          //margin-right: 2.5em;
         }
 
         .user-id {
@@ -227,13 +304,18 @@ body {
       }
     }
 
-    .reply {
-      margin-left: 4.1rem;
+    .replies-container {
+      .reply {
+        margin-left: 4.1rem;
+
+        .reply {
+          margin-left: 0;
+        }
+      }
 
       .comment-content {
         .reply-to {
-          color: $color-Moderate-blue;
-          font-weight: $font-weight;
+          @include reply-to-style();
         }
       }
     }
@@ -247,45 +329,7 @@ body {
   margin-bottom: 1.25rem;
 
   .current-user {
-    display: flex;
-    align-items: flex-start;
-    width: 100%;
-    gap: 0.94rem;
-    background-color: white;
-    box-sizing: border-box;
-    padding: 1.69rem;
-    border-radius: $border-radius;
-
-    img {
-      width: 2.19rem;
-      height: 2.19rem;
-    }
-
-    textarea {
-      @include font-family();
-      box-sizing: border-box;
-      padding: 1.25rem;
-      width: 100%;
-      outline: transparent;
-      border: 0.0625rem solid $color-Light-gray;
-      border-radius: $border-radius;
-
-      &:focus {
-        border: 0.0625rem solid $color-Dark-blue;
-      }
-    }
-
-    .send-btn {
-      @include comments-btn-style();
-      @include font-family();
-      padding: 0.5rem 1.0625rem;
-      border: none;
-      border-radius: 0.316rem;
-      background-color: $color-Moderate-blue;
-      color: white;
-
-      @include btn-interaction();
-    }
+    @include submit-btn-config();
   }
 }
 
@@ -493,6 +537,29 @@ body {
 @media screen and (max-width: 400px) {
   .comments-container {
     .comment {
+      .reply-box {
+        position: relative;
+        padding-bottom: 1rem;
+        .current-user-reply {
+          img {
+            position: absolute;
+            bottom: 2.5rem;
+            left: 1.812rem;
+          }
+
+          .send-reply-btn {
+            position: absolute;
+            padding: 1rem 1.56rem;
+            bottom: 2.5rem;
+            right: 1.812rem;
+          }
+
+          textarea {
+            margin-bottom: 4.95rem;
+            padding-bottom: 2.19rem;
+          }
+        }
+      }
       .comment-element {
         .score {
           padding: 1.3rem;
@@ -528,5 +595,15 @@ body {
 @media screen and (max-width: 391px) {
   .popup-container {
     width: 80%;
+  }
+}
+
+@media screen and (max-width: 341px) {
+  .comments-container {
+    .comment {
+      .reply {
+        margin-left: 0.8rem;
+      }
+    }
   }
 }
