--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,7 +106,7 @@ body {
     opacity: 0;
     transition: opacity 300ms ease;
 
-    &:active {
+    &.active {
       opacity: 1;
       visibility: visible;
     }
@@ -123,7 +123,7 @@ body {
   z-index: 100;
   display: none;
 
-  &:active {
+  &.active {
     display: block;
   }
 
